# orbite

./: .gitignore  Cargo.toml  README.md  cond_init.py  conf.ini  gnuplot.sh  plot.py  pretty_plot.py
Python_scripts/: convert.py  isochrony.py  trajectoire.py  verify.py
src/: main.rs  particules.rs  tree.rs  write.rs
src/bins/: after_run_viz.rs  mod.rs  new_after_run_viz.rs
src/lib/: live_viz.rs  mod.rs  particules.rs  tree.rs  write.rs
src/utils/: io.rs
