[package]
name = "orbite"
version = "0.2.0"
authors = [""]
edition = "2018"
default-run = "orbite"

[dependencies]
rand = "0.7.0"
rayon = "1.1"
rust-ini = "0.13"
rand_distr = "*"
kiss3d = "0.22.1"
nalgebra = "0.19.0"
csv = "1.1.1"
serde = { version = "1.0.103", features = ["derive"] }
bincode = "1.2.0"