[package]
name = "orbite"
version = "0.2.0"
authors = [""]
edition = "2018"
default-run = "orbite"

[dependencies]
rand = "0.7.0"
rayon = "1.1"
rust-ini = "0.13"
rand_distr = "*"
csv = "1.1.3"
kiss3d = "0.23.0"
nalgebra = "0.20.0"
serde = { version = "1.0.103", features = ["derive"] }
rmp-serde = "0.14.0"
serde_cbor = "0.10"
serde-pickle = "0.6.0"
